Fix bio text overflow on account profile page (#39418)

--- a/app/javascript/mastodon/components/account_header/styles.module.scss
+++ b/app/javascript/mastodon/components/account_header/styles.module.scss
@@ -278,6 +278,7 @@ $button-fallback-breakpoint: $button-breakpoint + 55px;
   font-size: 15px;
   color: var(--color-text-primary);
   unicode-bidi: plaintext;
+  overflow-wrap: anywhere;
 
   p {
     margin-bottom: 20px;
